# HexEditor

./: .gitignore  CMakeLists.txt  README.md
include/: app.hpp  file.hpp
src/: app.cpp  file.cpp  main.cpp
